kubernetes/apps/home/esphome/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: esphome-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: esphome
    egress:
      - toFQDNs:
          - matchName: files.pythonhosted.org
          - matchName: github.com
          - matchName: pypi.org
          - matchName: release-assets.githubusercontent.com
          - matchPattern: "*.espressif.com"
          - matchPattern: "**.platformio.org"
        toPorts:
          - ports:
              - port: "443"
